manifists/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pda-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500M"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
  - host: pizza-delivery-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pda-service
            port:
              number: 80
